# Alien-Build

./: .appveyor.yml  .cirrus.yml  .gitattributes  .gitignore  .travis.yml  .yath.rc  Changes  Changes.Alien-Base  Changes.Alien-Base-Wrapper  Changes.Alien-Build-Decode-Mojo  Changes.Test-Alien  README.md  SUPPORT  author.yml  compilet-Y7gS9.c  dist.ini  perlcriticrc  spellcheck.ini  weaver.ini
.github/workflows/: linux.yml  macos.yml  msys2-mingw.yml  (+1 more)
corpus/cmake-libpalindrome/libpalindrome/: CMakeLists.txt
example/: README  README.pod  build.pl  bzip2.alienfile  curl.alienfile  dontpanic.alienfile  gmake.alienfile  openssl.alienfile  wrapper.pl  xz-manual.alienfile  xz.alienfile
inc/: probebad.pl  trivial.xs
lib/: alienfile.pm
maint/: ci-test-plugins.pl  cip-after-install  cip-before-install  cip-test-plugins  gen-test-archives.pl  gen.pl  travis-daemon  travis-dzil  travis-install-deps  travis-run-test  update-cmake-libpalindrome  update-libpalindrome
t/: 00_diag.t  00_diag2.t  01_use.t  alien_base.t  alien_base2.t  alien_base__alt.t  alien_base__system_installed.t  alien_base_modulebuild_pkgconfig.t  alien_base_pkgconfig.t  alien_base_wrapper.t  alien_build.t  alien_build__download_rule.t  alien_build_commandsequence.t  alien_build_commandsequence__cd.t  alien_build_interpolate.t  alien_build_interpolate_default.t  alien_build_log.t  alien_build_log_abbreviate.t  alien_build_log_default.t  alien_build_meta.t  alien_build_mm.t  alien_build_plugin.t  alien_build_plugin_autoconf.t  alien_build_plugin_build_autoconf.t  alien_build_plugin_build_cmake.t  alien_build_plugin_build_copy.t  alien_build_plugin_build_make.t  alien_build_plugin_build_msys.t  alien_build_plugin_build_searchdep.t  alien_build_plugin_core_cleaninstall.t  alien_build_plugin_core_download.t  alien_build_plugin_core_ffi.t  alien_build_plugin_core_gather.t  alien_build_plugin_core_legacy.t  alien_build_plugin_core_override.t  alien_build_plugin_core_setup.t  alien_build_plugin_core_tail.t  alien_build_plugin_decode_dirlisting.t  alien_build_plugin_decode_dirlistingftpcopy.t  alien_build_plugin_decode_html.t  (+87 more)
(+124 files in other folders)
